# VKRenderer

./: .gitattributes  .gitignore  CMakeLists.txt
config/: application.cfg  vulkan.cfg
config/graphics_pipeline_layouts/: ForwardOpaque.json
config/rendermodes/: Forward.json
config/vertex_layouts/: PositionColor.json  PositionTexCoordNormals.json
libraries/MetaStuff/: JsonCast.h
libraries/nlohmannJSON/: json.hpp
resources/config files/: application.json  graphics.json  vulkan.json
resources/materials/: default.json
resources/scene/: Basic Scene.json  basicScene.json
shaders/: compile.sh  shader.frag
sources/: Application.cpp  Application.h  CommonInclude.h  Engine.cpp  Engine.h  Main.cpp  Paths.h  main.cpp  paths.h
sources/Core/: Engine.cpp  Engine.h  EngineSystemThreadingContainer.cpp  EngineSystemThreadingContainer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Transform.cpp  Transform.h
sources/Data Structures/: Handle.h  LinearStaticReusablePool.h  StaticLinearPoolItem.h
sources/DataStorage/: LinearPoolItem.h  LinearStaticReusablePool.h  ReusablePoolItem.h  StaticReusablePool.h  StaticStack.h
sources/Generic/: GameObject.cpp  GameObject.h  SceneManager.cpp  Transform.h
sources/Math/: Math.h  MathSerialization.h  Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h
sources/Serializables/: ConfigTypes.h  GenericTypes.h  SerializeMacro.h  Vectors.h  VulkanTypes.h
sources/Utilities/: AwaitableTask.cpp  AwaitableTask.h  Clock.h  JSONLoader.h  (+8 more)
src/: Application.cpp  Application.h  CommonInclude.h  main.cpp
(+173 files in other folders)
